<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.registrar.RegistrarActivity">

    <EditText
        android:id="@+id/EtDni"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/documento"
        android:importantForAutofill="no"
        android:inputType="text" />

    <EditText
        android:id="@+id/EtNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombre"
        android:inputType="text"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/EtApellido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/apellido"
        android:inputType="text"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/EtCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/correo"
        android:inputType="text"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/EtClave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/Guardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guardar" />

</LinearLayout>